<resources>
    <string name="app_name">Radio.UA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">one</string>
    <string name="hit_fm_url">http://online-hitfm.tavrmedia.ua/HitFM</string>
    <string name="rus_radio_url">http://online-rusradio.tavrmedia.ua/RusRadio</string>
    <string name="kiss_fm_url">http://online-kissfm.tavrmedia.ua/KissFM</string>
    <string name="radio_rocks_url">http://online-radioroks.tavrmedia.ua/RadioROKS</string>
    <string name="radio_relax_url">http://online-radiorelax2.tavrmedia.ua/RadioRelax</string>
    <string name="genre_pop">pop</string>
    <string name="genre_dance">dance</string>
    <string name="genre_rock">rock</string>
    <string name="lux_fm_url">http://icecastdc.luxnet.ua/lux</string>
    <string name="europa_plus_url">http://cast.radiogroup.com.ua:8000/europaplus</string>
    <string name="desc_next_radio_station">Next radiostation</string>
    <string name="desc_play_pause_radio_station">Play pause radiostation</string>
    <string name="desc_preious_radio_station">Preious radiostation</string>
    <string name="desc_image_of_radiostation">Image of radiostation</string>
    <string name="new_radiostation">New radiostation</string>
    <string name="radiostation_url">URL</string>
    <string name="radiostation_name">Name</string>
    <string name="radiostation_url_icon">URL\Path of icon</string>
    <string name="radiostation_genre">Genre</string>
    <string name="add_radiostation">Add</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_radio_item">Radiostation</string>
    <string name="radioitem_save">Save</string>
    <string name="radioitem_cancel">Cancel</string>
    <string name="radioitem_add_from_app">Add from app</string>
    <string name="path">Path</string>
    <string name="url">URL</string>
</resources>
