<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_new_radiostation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/new_radiostation"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_radiostation_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="24sp"
        android:inputType="textPersonName"
        android:hint="@string/radiostation_name" />

    <EditText
        android:id="@+id/et_radiostation_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="24sp"
        android:inputType="textUri"
        android:hint="@string/radiostation_url" />

    <EditText
        android:id="@+id/et_radiostation_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textUri"
        android:textSize="24sp"
        android:hint="@string/radiostation_url_icon" />

    <EditText
        android:id="@+id/et_radiostation_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:hint="@string/radiostation_genre" />
</LinearLayout>