<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="kwygonjin.com.homeinternetradio.RadioItemActivity"
    tools:showIn="@layout/activity_radio_item"
    android:padding="@dimen/padding"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_new_radiostation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/new_radiostation"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        android:paddingBottom="@dimen/padding"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_radiostation_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="24sp"
        android:inputType="textPersonName"
        android:hint="@string/radiostation_name" />

    <EditText
        android:id="@+id/et_radiostation_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="24sp"
        android:inputType="textUri"
        android:hint="@string/radiostation_url" />

    <EditText
        android:id="@+id/et_radiostation_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/radiostation_url_icon"
        android:inputType="textUri"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_radiostation_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:hint="@string/radiostation_genre" />

    <Button
        android:id="@+id/btn_add_from_app"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/padding"
        android:paddingTop="@dimen/padding"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/radioitem_add_from_app"
        style="?android:attr/borderlessButtonStyle"
        android:textSize="16sp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding"
        android:paddingTop="@dimen/padding"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:padding="@dimen/padding"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/radioitem_cancel"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:padding="@dimen/padding"
            android:background="@color/colorAccent"
            android:textSize="16sp"
            android:text="@string/radioitem_save" />

    </LinearLayout>

</LinearLayout>
